# simple-notepad-project

./: CMakeLists.txt  Notepad.md  find_replace_dialog.ui  main.cpp  main_window.cpp  main_window.h  notepad_exception.h  sort.h  spell_checker.h  spell_checker_highlighter.h  text_transform.h  word_frequency_dialog.ui
.github/workflows/: cmake.yml
